--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,45 @@ ul {
   list-style: none;
 }
 
+.container {
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  /* outline: 2px solid tomato; */
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 /* Header */
 
+header {
+  border-bottom: 1px solid #f5f5f5;
+}
+
+.container.header-container {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+nav {
+  display: flex;
+}
+
 .logo {
+  display: flex;
+  align-items: center;
+  margin-right: 76px;
   color: var(--clr-theme);
   font-family: "Raleway", sans-serif;
   font-weight: 800;
@@ -38,11 +74,18 @@ ul {
   color: var(--clr-brand);
 }
 
+.nav-list {
+  display: flex;
+  align-items: center;
+  padding-left: 0;
+}
+
 .nav-list a {
   color: var(--clr-theme);
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-right: 40px;
 }
 
 .nav-list a:hover,
@@ -52,6 +95,14 @@ ul {
 
 .nav-list a.current {
   color: var(--clr-brand);
+}
+
+.nav-link {
+  display: flex;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-left: 0px;
+  gap: 40px;
 }
 
 .nav-link a {
@@ -68,15 +119,24 @@ ul {
 }
 
 /* Hero */
+.hero-container {
+  padding-top: 188px;
+  padding-bottom: 188px;
+}
+
 .hero {
+  text-align: center;
   background-color: var(--clr-theme);
 }
 
 .hero-logo {
+  margin-top: 0px;
+  width: 496px;
+  margin-right: auto;
+  margin-left: auto;
   color: var(--clr-white);
   font-size: 56px;
   line-height: 1.1;
-  text-align: center;
   letter-spacing: 0.02em;
 }
 
@@ -88,10 +148,11 @@ ul {
   font-family: inherit;
   font-weight: 500;
   line-height: 1.5;
-  align-items: center;
+
   letter-spacing: 0.04em;
   font-size: 16px;
   cursor: pointer;
+  padding: 16px 32px;
 }
 
 .hero-btn:hover,
@@ -100,8 +161,24 @@ ul {
 }
 
 /* Features */
+.features-container {
+  padding-bottom: 0;
+}
+
+.features-list {
+  margin-top: 0px;
+  margin-bottom: 0;
+  display: flex;
+}
+
+.about-item {
+  flex-basis: calc((100% - 72px) / 4);
+  margin-right: 24px;
+}
 
 .section-subtitle {
+  margin-top: 0px;
+  margin-bottom: 8px;
   color: var(--clr-theme);
   font-weight: 500;
   font-size: 20px;
@@ -110,6 +187,7 @@ ul {
 }
 
 .text {
+  margin: 0px;
   color: var(--clr-text);
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -118,11 +196,27 @@ ul {
 /* What are we doing */
 
 .section-title {
+  margin-bottom: 72px;
+  margin-top: 0px;
   font-size: 36px;
   line-height: 1.1;
   text-align: center;
   text-transform: capitalize;
   letter-spacing: 0.02em;
+}
+
+.img-list {
+  display: flex;
+  padding-left: 0px;
+}
+
+.img-point {
+  flex-basis: calc((100% - 48px) / 3);
+  margin-right: 24px;
+}
+
+.img-list:nth-child(3n) {
+  padding-right: 0;
 }
 
 /* Our team */
@@ -131,22 +225,32 @@ ul {
   background-color: var(--clr-smoke);
 }
 
+.team-list {
+  display: flex;
+}
+
 .team-person {
+  flex-basis: calc(100% - 72px) / 4;
+  margin-right: 24px;
+  padding-bottom: 32px;
+  text-align: center;
   background-color: var(--clr-white);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-list .subtitle {
-  text-align: center;
-}
-
-.team-list .text {
-  text-align: center;
+.person-subtitle {
+  margin-top: 32px;
+  margin-bottom: 8px;
 }
 
 /* Footer */
+
+.footer-container {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
 
 footer {
   background-color: var(--clr-theme);
@@ -157,6 +261,7 @@ footer {
 }
 
 .foot-text {
+  width: 264px;
   color: var(--clr-border);
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -170,6 +275,13 @@ footer {
 
 /* filter btn */
 
+.btn-list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 72px;
+  gap: 24px;
+}
+
 .filter-btn {
   font-weight: 500;
   font-size: 16px;
@@ -180,6 +292,7 @@ footer {
   color: var(--clr-brand);
   letter-spacing: 0.04em;
   cursor: pointer;
+  padding: 12px 24px 12px 24px;
 }
 
 .filter-btn:hover {
@@ -189,6 +302,31 @@ footer {
 
 /* Project examples */
 
+.project-list {
+  padding-left: 0px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .project-link {
-  border: 1px solid var(--clr-border);
+  flex-basis: calc((100% - 48px) / 3);
+  margin-right: 24px;
+}
+
+.project-link:nth-child(3n) {
+  margin-right: 0px;
+}
+
+.project-container {
+  border-bottom: 1px solid var(--clr-border);
+  border-left: 1px solid var(--clr-border);
+  border-right: 1px solid var(--clr-border);
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-left: 16px;
+  margin-bottom: 48px;
+}
+
+.project-container .text {
+  margin-top: 8px;
 }
